--- a/Examples/2D/Vlasov1D1V/SelfConsistentElectricField/README
+++ b/Examples/2D/Vlasov1D1V/SelfConsistentElectricField/README
@@ -2,10 +2,10 @@
 
   df         df                     df 
   --  +  v ------  +  (E + v x B) ------  =  0
-  dt        dx_i                   dv_i
+  dt         dx                     dv
 
-   0  <= x <= 7;   Periodic
-   0 <=  v <= 2pi; Homogenous Dirichlet
+   0 <= x <= 2pi;   Periodic
+  -6 <= v <= 6; Homogenous Dirichlet
 
 Initial Solution:
 
