--- a/Examples/2D/NavierStokes2D/InviscidVortexConvection_Ensemble_libROM_DMD_Predict/README
+++ b/Examples/2D/NavierStokes2D/InviscidVortexConvection_Ensemble_libROM_DMD_Predict/README
@@ -58,15 +58,34 @@ Initial Solution:
     dv  =   --- exp [ ----- ] + (x-x0)^2
             2pi         2
 
+This is an example of "ensemble" or multi-domain
+simulation, where multiple independent simulations
+sharing the same solvers and physics (but differing
+grid sizes) are executed together.
+
+Here, 4 simulations with grid sizes:
+128 X  16
+64  X  32
+32  X  64
+16  X 128
+are run together on 8 MPI ranks with the processes
+along each dimension as:
+8 X 1
+4 X 2
+2 X 4
+1 X 8,
+respectively.
+
 Instead of solving the discretized PDE, HyPar uses a trained
 DMD to predict the solution.
 
 Use Examples/Python/plotSolution_2DBinary.py to plot solutions.
 
 The following input files are required:
-+ solver.inp    -   General solver parameters
-+ boundary.inp  -   Boundary conditions
-+ physics.inp   -   Physical parameters
++ simulation.inp  -   Specify the number of simulations/domains to run
++ solver.inp      -   General solver parameters
++ boundary.inp    -   Boundary conditions
++ physics.inp     -   Physical parameters
 
 + librom.inp    -   Contains libROM-specific inputs
 
@@ -80,3 +99,8 @@ Due to file sizes, the required file initial.inp for
 initial solution are not provided. It can be generated 
 by compiling aux/exact.c and running the executable in the 
 run directory (where solver.inp is present).
+
+Notes:-
+The code aux/exact.c is an example to generate the initial
+solution file in the correct format required by the solver. 
+The exact solution file also needs to be in the same format.
