--- a/Examples/2D/NavierStokes2D/InviscidVortexConvection_Ensemble_libROM_DMD_Train/README
+++ b/Examples/2D/NavierStokes2D/InviscidVortexConvection_Ensemble_libROM_DMD_Train/README
@@ -1,5 +1,5 @@
 2D NAVIER-STOKES EQUATIONS FOR COMPRESSIBLE FLOWS
-WITH libROM DMD PREDICTION
+WITH libROM DMD TRAINING
 
   d   [ rho   ]   d   [   rho*u    ]    d  [   rho*v   ]
   --  [ rho*u ] + --  [rho*u*u + p ] +  -- [  rho*u*v  ] =  Viscous + Gravity terms
@@ -58,21 +58,40 @@ Initial Solution:
     dv  =   --- exp [ ----- ] + (x-x0)^2
             2pi         2
 
-Instead of solving the discretized PDE, HyPar uses a trained
-DMD to predict the solution.
+This is an example of "ensemble" or multi-domain
+simulation, where multiple independent simulations
+sharing the same solvers and physics (but differing
+grid sizes) are executed together.
 
-Use Examples/Python/plotSolution_2DBinary.py to plot solutions.
+Here, 4 simulations with grid sizes:
+128 X  16
+64  X  32
+32  X  64
+16  X 128
+are run together on 8 MPI ranks with the processes
+along each dimension as:
+8 X 1
+4 X 2
+2 X 4
+1 X 8,
+respectively.
+
+In addition to the evolution of the vortex, a DMD
+object is created using libROM and trained on the 
+simulation data. The solution is predicted using this
+DMD object at the same output times as the actual
+simulation.
+
+Use plotSolution.py to plot the HyPar and DMD solutions
+and compute/plot the diff between the two.
 
 The following input files are required:
-+ solver.inp    -   General solver parameters
-+ boundary.inp  -   Boundary conditions
-+ physics.inp   -   Physical parameters
++ simulation.inp  -   Specify the number of simulations/domains to run
++ solver.inp      -   General solver parameters
++ boundary.inp    -   Boundary conditions
++ physics.inp     -   Physical parameters
 
 + librom.inp    -   Contains libROM-specific inputs
-
-+ DMD           -   Trained DMD objects; must be located
-                    in the directory specified in librom.inp
-                    as "dmd_dirname".
 
 ** See hypar/README for other (optional) input files
 
@@ -80,3 +99,8 @@ Due to file sizes, the required file initial.inp for
 initial solution are not provided. It can be generated 
 by compiling aux/exact.c and running the executable in the 
 run directory (where solver.inp is present).
+
+Notes:-
+The code aux/exact.c is an example to generate the initial
+solution file in the correct format required by the solver. 
+The exact solution file also needs to be in the same format.
