--- a/Examples/2D/Vlasov1D1V/TwoStreamInstability_libROM_DMD_Train/README
+++ b/Examples/2D/Vlasov1D1V/TwoStreamInstability_libROM_DMD_Train/README
@@ -1,9 +1,9 @@
-1D-1V VLASOV EQUATION
+1D-1V VLASOV EQUATION: TWO-STREAM INSTABILITY
 WITH libROM DMD TRAINING
 
-  df         df                     df 
-  --  +  v ------  +  (E + v x B) ------  =  0
-  dt         dx                     dv
+  df         df          df
+  --  +  v ------  +  E ----  =  0
+  dt         dx          dv
 
    0 <= x <= 2pi;   Periodic
   -6 <= v <= 6; Homogenous Dirichlet
